custom 404 page + fixing masking grid overlap issue

--- a/frontend/src/components/layout.scss
+++ b/frontend/src/components/layout.scss
@@ -65,11 +65,6 @@ body {
     background: $colorBackground;
 
     .scroll {
-      // position: absolute;
-      // top: 0;
-      // right: 0;
-      // bottom: 0;
-      // left: 0;
       overflow: auto;
       mask-image: linear-gradient(
         180deg,
@@ -87,7 +82,7 @@ body {
       padding: 30px 30px 0 30px;
 
       @media (min-width: 768px) {
-        padding: 60px 60px 0 60px;
+        padding: 60px 60px 30px 60px;
       }
     }
   }
